# llm_graph_embedder

./: .gitignore  README.md  hello.py  pyproject.toml
notebooks/: 02.evaluate_baseline.ipynb  03.evaluate_competitor.ipynb  dataset_sandbox.ipynb  evaluate_baseline.ipynb  evaluate_competitor.ipynb  llm_graph_embedder.ipynb  prepare_data.ipynb  train_model.ipynb
shellscripts/: download-text-features.sh
