[project]
name = "llm_graph_embedder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black[jupyter]>=24.10.0",
    "ogb>=1.3.6",
    "rich>=13.9.4",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "umap-learn>=0.5.7",
    "torch>=2.5.1",
    "torch-geometric>=2.6.1",
    "transformers>=4.47.1",
    "pdfminer>=20191125",
    "datasets>=3.2.0",
    "pypdf>=5.1.0",
    "accelerate>=1.2.1",
    "pandas>=2.2.3",
    "bitsandbytes>=0.45.0",
    "peft>=0.14.0",
    "trl>=0.13.0",
    "ipywidgets>=8.1.5",
    "ollama>=0.4.5",
    "llama-index>=0.12.9",
    "llama-index-embeddings-ollama>=0.5.0",
]
