[project]
name = "llm_graph_embedder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ogb>=1.3.6",
    "rich>=13.9.4",
    "ipykernel>=6.29.5",
    "torch>=2.5.1",
    "torch-geometric>=2.6.1",
    "transformers>=4.47.1",
    "datasets>=3.2.0",
    "accelerate>=1.2.1",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "ipywidgets>=8.1.5",
]
